--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="paper image">
   <p>How can be </p>
-   <p> someone so cute ❤️ </p>
+   <p> someone so adorable 🤌❤️ </p>
 
   <img src="https://i.ibb.co/cS6Pm1QG/Whats-App-Image-2026-02-06-at-6-46-14-PM-1.jpg"/>
 </div>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
